# OracleBot

./: .gitignore  CLAUDE.md  pyproject.toml
docs/plans/: 2026-01-13-oracle-slack-bot-design.md  2026-01-13-oracle-slack-bot-implementation.md
src/: __init__.py  main.py  proxy.py
src/agent/: __init__.py  agent_entrypoint.py  slack_tool_logger.py
