[project]
name = "oracle-bot"
version = "0.1.0"
description = "Slack bot with Claude agent access to OracleLoop codebase"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.65.66",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = ["modal"]
